--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</a>
 				</li>
 			</ul>
-			<a href="mailto:rayonsledisque@gmail.com" id="mail">rayonsledique@gmail.com<a/>
+			<a href="mailto:rayonsledisque@gmail.com" id="mail">rayonsledisque@gmail.com<a/>
 		</footer>
 	</body>
 </html>
